Added hover text and blinking cursor under the history

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             <div id="columns">
                 <div id="column1"></div>
                 <div id="column2"></div>
-                <!-- History -->
-                <div id="selection-history"></div>
+            </div>
+            <div id="selection-history">
+                <div id="selection-history-top"></div>
+                <div id="selection-history-bottom">> <span class="blinking-cursor">█</span></div>
             </div>
         </div>
     </div>
