--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Fallout Terminal Hacking Mini-Game">
+    <meta name="keywords" content="Fallout, Hacking, Mini-Game">
+    <meta name="author" content="DeceitfulDragon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RobCo Termlink</title>
     <link rel="stylesheet" href="assets/css/style.css">
