minor tweaks to index

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Fallout Terminal Hacking Mini-Game">
-    <meta name="keywords" content="Fallout, Hacking, Mini-Game">
+    <meta name="description" content="Fallout Terminal Hacking Minigame">
+    <meta name="keywords" content="Fallout, Hacking, Minigame">
     <meta name="author" content="DeceitfulDragon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RobCo Termlink</title>
@@ -31,7 +31,7 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/script.js"></script> <!-- Hacking Script -->
     <script src="assets/js/words.js"></script> <!-- Word List by Difficulty -->
+    <script src="assets/js/script.js"></script> <!-- Hacking Script -->
 </body>
 </html>
