--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="author" content="DeceitfulDragon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RobCo Termlink</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- The font Fallout 4 uses for its terminals -->
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
